--- a/Checkpoint 6/Checkpoint_6.html
+++ b/Checkpoint 6/Checkpoint_6.html
@@ -6,6 +6,10 @@
     <title>Checkpoint 6</title>
 
     <style>
+        .checkpoint_content {
+            margin: 20px 20px 20px 20px;
+        }
+        
         .checkpoint_questions > .spacer30  {
             height: 30px;
             width: 100%;
