--- a/Checkpoint 6/Checkpoint_6.html
+++ b/Checkpoint 6/Checkpoint_6.html
@@ -8,6 +8,7 @@
     <style>
         .checkpoint_content {
             margin: 20px 20px 20px 20px;
+            text-align: justify;
         }
         
         .checkpoint_questions > .spacer30  {
